Fixed issues get/set userData. Make use of the newer APIs to access Memory Addresses via MemorySegment APIs.